--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-spring.cloud.config.enabled=false
+#configuring the application name
 spring.application.name=currency-conversion-service
+#configuring the port for the service
 server.port=8100
+#configuring the URL of Eureka naming server
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
-currency-exchange-service.ribbon.listOfServers=http://localhost:8000, http://localhost:8001
+#configuring the instances of currency exchange service
+#currency-exchange-service.ribbon.listOfServers=http://localhost:8000, http://localhost:8001
